# openvino-1

./: .gitmodules
.github/workflows/: android.yml  assign_issue.yml  ci-doctor-mq.lock.yml  ci-doctor.lock.yml  coverage.yml  dev_cpu_linux_snippets_libxsmm.yml  job_cpu_functional_tests.yml  job_cxx_unit_tests.yml  job_gpu_tests.yml  job_jax_layer_tests.yml  job_jax_models_tests.yml  job_keras3_backend.yml  job_onnx_models_tests.yml  job_onnx_runtime.yml  job_openvino_js.yml  job_python_api_tests.yml  job_python_unit_tests.yml  job_pytorch_fx_layer_tests.yml  job_pytorch_layer_tests.yml  job_pytorch_models_tests.yml  job_tensorflow_layer_tests.yml  job_tensorflow_models_tests.yml  job_tokenizers.yml  linux_conditional_compilation.yml  linux_riscv.yml  linux_sanitizers.yml  mac_arm64.yml  ubuntu_22.yml  windows_conditional_compilation.yml  windows_vs2022_release.yml  workflows_scans.yml
cmake/: features.cmake
cmake/developer_package/compile_flags/: os_flags.cmake
cmake/packaging/: debian.cmake  rpm.cmake
docs/: requirements.txt
samples/c/runtime_load/: main.cpp
samples/cpp/benchmark_app/: benchmark_app.hpp  infer_request_wrap.hpp  main.cpp
samples/cpp/classification_sample_async/: main.cpp
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/c/src/: CMakeLists.txt  ov_c_api.cpp  ov_model.cpp  ov_node.cpp
src/bindings/c/tests/: CMakeLists.txt  ov_model_test.cpp
src/bindings/js/node/: package-lock.json
src/bindings/python/: CMakeLists.txt  constraints.txt
src/common/conditional_compilation/: README.md
src/common/util/: CMakeLists.txt
src/common/util/src/: file_util.cpp  parallel_read_streambuf.cpp
src/core/src/: model.cpp
src/core/src/pass/: manager.cpp
src/core/tests/: constant_folding.cpp
src/inference/: CMakeLists.txt
src/inference/src/: cache_manager.hpp  file_utils.cpp  ie_core.cpp  single_file_storage.cpp
src/plugins/auto/: plugin.cpp
src/plugins/auto_batch/: auto_batch.cpp
src/plugins/intel_cpu/: CMakeLists.txt  README.md
src/plugins/intel_cpu/src/: compiled_model.cpp  config.cpp  config.h  cpu_memory.cpp  cpu_memory.h  cpu_shape.h  cpu_types.cpp  cpu_types.h  dnnl_extension_utils.cpp  dnnl_extension_utils.h  dnnl_postops_composer.cpp  edge.cpp  edge.h  exec_network.cpp  extension.cpp  graph.cpp  graph_dumper.cpp  graph_optimizer.cpp  infer_request.cpp  infer_request.h  node.cpp  node.h  nodes_factory.cpp  plugin.cpp
src/plugins/intel_cpu/src/emitters/: jit_dnnl_emitters.cpp  jit_dnnl_emitters.hpp
src/plugins/intel_cpu/src/emitters/x64/: cpu_generator.cpp  jit_dnnl_ext_emitters.hpp  jit_snippets_emitters.cpp  jit_snippets_emitters.hpp
src/plugins/intel_cpu/src/memory_desc/: cpu_memory_desc_utils.cpp  cpu_memory_desc_utils.h
src/plugins/intel_cpu/src/nodes/: adaptive_pooling.cpp  color_convert.cpp  conv.cpp  conv.h  convert.cpp  ctc_greedy_decoder.cpp  ctc_greedy_decoder_seq_len.cpp  deconv.cpp  dft.h  eltwise.cpp  eltwise.h  eye.cpp  fake_quantize.cpp  fullyconnected.cpp  fullyconnected.h  gather.cpp  gather.h  grid_sample.cpp  grid_sample.hpp  input.cpp  interaction.cpp  interpolate.cpp  mathematics.cpp  matmul.cpp  matmul.h  matrix_nms.cpp  mha.cpp  multiclass_nms.cpp  mvn.cpp  mvn.h  non_max_suppression.cpp  non_max_suppression.h  non_zero.cpp  normalize.cpp  pooling.cpp  priorbox.cpp  priorbox_clustered.cpp  proposal.cpp  rdft.h  reduce.cpp  (+15 more)
src/plugins/intel_cpu/src/nodes/common/: cpu_convert.cpp  softmax.cpp
src/plugins/intel_cpu/src/nodes/executors/: eltwise.cpp  eltwise.hpp  eltwise_list.cpp  eltwise_list.hpp  executor.hpp  matmul.cpp  matmul.hpp  matmul_list.cpp  matmul_list.hpp  mvn.cpp  mvn.hpp  mvn_list.cpp  mvn_list.hpp  reduce.hpp  reduce_list.cpp  reduce_list.hpp
src/plugins/intel_cpu/src/nodes/executors/acl/: acl_matmul.cpp  acl_matmul.hpp  acl_mvn.cpp  acl_mvn.hpp  acl_reduce.cpp  acl_reduce.hpp  acl_utils.hpp
src/plugins/intel_cpu/src/nodes/executors/common/: ref_eltwise.cpp  ref_eltwise.hpp  ref_mvn.cpp  ref_mvn.hpp  ref_reduce.cpp  ref_reduce.hpp
src/plugins/intel_cpu/src/nodes/executors/dnnl/: dnnl_matmul.cpp  dnnl_matmul.hpp
src/plugins/intel_cpu/src/nodes/executors/x64/: jit_eltwise.cpp  jit_eltwise.hpp  jit_mvn.cpp  jit_mvn.hpp
src/plugins/intel_cpu/src/nodes/kernels/x64/: gather_uni_kernel.cpp  grid_sample.cpp  jit_kernel.hpp  jit_kernel_base.cpp
src/plugins/intel_cpu/src/onednn/: iml_type_mapper.cpp  iml_type_mapper.h
src/plugins/intel_cpu/src/transformations/: defs.hpp  transformation_pipeline.cpp  transformation_pipeline.h
src/plugins/intel_cpu/src/transformations/cpu_opset/: convert_to_cpu_specific_opset.hpp
src/plugins/intel_cpu/src/transformations/cpu_opset/common/pass/: convert_matmul_to_fc.cpp  convert_to_leaky_relu.cpp  convert_to_power_static.cpp  convert_to_swish_cpu.cpp  fc_bias_fusion.cpp  reshape_fc_fusion.cpp
src/plugins/intel_cpu/src/transformations/cpu_opset/x64/pass/: convert_to_interaction.cpp  mha_fusion.cpp
src/plugins/intel_cpu/src/transformations/snippets/x64/op/: fused_mul_add.cpp  fused_mul_add.hpp
src/plugins/intel_cpu/src/transformations/snippets/x64/pass/: brgemm_to_brgemm_cpu.cpp  fuse_load_store_and_convert.cpp
src/plugins/intel_cpu/src/utils/: cpu_utils.hpp  debug_capabilities.cpp  denormals.hpp  ngraph_utils.hpp  node_dumper.cpp
src/plugins/intel_cpu/tests/functional/: CMakeLists.txt
src/plugins/intel_cpu/tests/functional/shared_tests_instances/: skip_tests_config.cpp
src/plugins/intel_cpu/tests/functional/single_layer_tests/: eltwise.cpp  matmul.cpp  mvn.cpp  reduce_ops.cpp
src/plugins/intel_cpu/tests/functional/test_utils/: cpu_test_utils.cpp
src/plugins/intel_cpu/tests/unit/: CMakeLists.txt  jit_kernel_test.cpp  registers_pool.cpp
src/plugins/intel_cpu/tests/unit/ngraph_transformations/: convert_matmul_test.cpp  convert_to_interaction.cpp  convert_to_leaky_relu_test.cpp  move_eltwise_up_data_movement_test.cpp  optimize_sequence_transposes_test.cpp
src/plugins/intel_gpu/: CMakeLists.txt
src/tests/engines_util/: test_case.cpp  test_case.hpp
tests/: constraints.txt
tests/e2e_tests/: requirements.txt
(+128 files in other folders)
